# orbita

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  setup.bat  setup.command  tailwind.config.js
.github/workflows/: release.yml
docs/adr/: 0001-stack.md  0002-core-adapters-boundary.md  0003-sync-engine-hybrid-two-stage.md  0004-export-options-flags.md  0005-alpha-scope-multicam-disabled.md  0006-cache-lru-por-ultimo-uso.md  0007-deteccao-de-fontes-por-esqueleto-de-nome.md  0008-sidecar-venv-em-debug-bundle-em-release.md  README.md
src/: App.tsx  style.css
src-python/: appsettings.py  build_sidecar.py  fetch_ffmpeg.py  main.py  requirements.txt
src-python/media/: audio.py  cachedir.py  fftools.py  inspector.py  peakcache.py  probecache.py  proxy.py
src-python/prproj/: builder.py  compress.py  uid.py  validate.py
src-python/sync/: engine.py  model.py  serialize.py  tcmatch.py  waveform.py
src-python/tests/: test_cachedir.py  test_engine_clock_trust.py  test_engine_overlap.py  test_engine_resync.py  test_engine_tc_only.py  test_groups.py  test_prproj_project.py  test_prproj_subgroup.py  test_prproj_validate.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffbins.rs  frame.rs  fs_expand.rs  lib.rs  main.rs  pcm.rs  sidecar.rs  vlc.rs
src/components/: AlphaNotice.tsx  CameraSplitDialog.tsx  MediaContent.tsx  MediaTree.tsx  Monitor.tsx  ProcessingPanel.tsx  ProjectSettings.tsx  SelectionActions.tsx  SettingsDialog.tsx  Splitter.tsx  StatusBar.tsx  SyncControls.tsx  SyncSettingsBar.tsx
src/components/Timeline/: Timeline.tsx  draw.test.ts  draw.ts
src/hooks/: useI18n.ts  useNotificationSounds.ts  useSidecarProgress.ts  useTimelineData.ts  useUpdateCheck.ts
src/i18n/: en.json  i18n.test.ts  pt-BR.json
src/lib/: clipFormat.ts  links.ts  pcmCache.ts  peaks.ts  proxy.ts  syncPayload.ts  timecode.ts  transport.ts  updateCheck.ts  version.ts  videoProbe.ts  vlc.ts  window.test.ts  window.ts
src/store/: appStore.test.ts  appStore.ts
src/types/: timeline.test.ts  timeline.ts
