[package]
name = "orbita"
version = "0.1.6"
description = "Multicam sync app for Adobe Premiere and Avid Media Composer"
authors = ["Ciclo Media"]
edition = "2021"

[lib]
name = "orbita_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Monitor de vídeo: libVLC carregado em RUNTIME (dlopen) numa NSView nativa.
# Não é dependência de build — sem VLC.app instalado o app roda, só sem monitor.
[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"
cocoa = "0.26"
objc = "0.2"

# Mesma ideia no Windows: libvlc.dll carregado em runtime, numa HWND filha.
# Sem VLC instalado o app roda, só sem monitor (ver src-tauri/src/vlc.rs).
[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
