[package]
name = "orbita"
version = "0.1.7"
description = "Multicam sync app for Adobe Premiere and Avid Media Composer"
authors = ["Ciclo Media"]
edition = "2021"

[lib]
name = "orbita_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
